rename to ClawKeeper, add stable IDs, CLI setup, and agent skills
- Rename app from Welltime to ClawKeeper across all files
- Embed stable IDs as HTML comments in markdown (<!-- id:xxx -->)
- Add healIds() for duplicate/missing ID detection
- Fix ID accumulation bug (multiple IDs per line on each save)
- Add CLAWKEEPER_DIR env var for shared data directory
- Add bin/clawkeeper wrapper script for system-wide CLI access
- Add Claude Code skill (.claude/skills/clawkeeper/)
- Add OpenClaw skill (skills/clawkeeper/)
- Rewrite README with full setup documentation
- Add CLI source (cli/) to version control

--- a/debug-storage.html
+++ b/debug-storage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welltime Storage Debug</title>
+    <title>ClawKeeper Storage Debug</title>
 </head>
 <body>
     <h1>Storage Debug Info</h1>
