--- a/sell-page.html
+++ b/sell-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welltime - Turn AI talk into action</title>
+    <title>ClawKeeper - Turn AI talk into action</title>
     <style>
         * {
             margin: 0;
@@ -198,7 +198,7 @@
     <!-- Hero -->
     <section class="hero">
         <div class="container">
-            <div class="brand">WELLTIME</div>
+            <div class="brand">CLAWKEEPER</div>
             <h1>Use AI to manage<br>your task list</h1>
             <p class="subhead">You know the power of talking to AI. Turn talk into action.</p>
             <a href="#" class="cta-button">Download for Mac • Free Trial</a>
